--- a/Day 2/PositioningChallenge/challenge-position.html
+++ b/Day 2/PositioningChallenge/challenge-position.html
@@ -19,7 +19,75 @@
 				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
 				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-				ut aliquip ex ea commodo consequat. 
+				ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat.    
 			</p>
 		</div>
 		<div id="secondColumn" class="equal">Column 2
@@ -28,7 +96,75 @@
 				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
 				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-				ut aliquip ex ea commodo consequat. 
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+				magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+				quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+				ut aliquip ex ea commodo consequat.   
 			</p>
 		</div>
 	</div>
